css/main.css
#navigation {
	position: absolute;
	left: 0px;
	top: 0px;

	width: 100%;
	height: 148px;

	background-color: #000000;
}

	#left_nav {
		position: absolute;
		left: 0px;
		top: 0px;
	}

	#right_nav {
		position: absolute;
		right: 0px;
		top: 0px;
	}

	.navigation_links {
		width: 40%;
		height: auto;
	}

		.navigation_links ul {
			margin: 0px;
			padding: 0px;
			list-style: none;
		}

		.navigation_links li {
			display: inline-block;

			width: 33%;
			text-align: center;
		}

			.navigation_links a {
				color: #ffffff;
			}

	#logo {
		position: absolute;
		left: 50%;
		top: 50px;

		width: 196px;
		height: 196px;

		margin-left: -98px;
	}

